<?xml version="1.0" encoding="utf-8" ?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#000"
    android:orientation="vertical"
    tools:context=".MainActivity"
    tools:ignore="Overdraw">

    <TextView
        android:id="@+id/textViewNewton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:height="50dp"
        android:paddingTop="10dp"
        android:text="@string/newton"
        android:textAlignment="center"
        android:textColor="#fff"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textViewAdvancedMath"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewAdvancedMath"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:height="50dp"
        android:paddingTop="5dp"
        android:text="@string/a_really_micro_micro_service_for_advanced_math"
        android:textAlignment="center"
        android:textColor="#fff"
        android:textSize="17sp"
        app:layout_constraintBottom_toTopOf="@+id/textViewResult"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewNewton" />

    <TextView
        android:id="@+id/textViewResult"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:height="45dp"
        android:text="@string/resultTextView"
        android:textColor="#fff"
        android:textSize="17sp"
        app:layout_constraintBottom_toTopOf="@+id/StyleOperation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewAdvancedMath" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/StyleOperation"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="#fff"
        app:layout_constraintBottom_toTopOf="@+id/StyleExpression"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewResult"
        tools:ignore="ExtraText,MissingConstraints">

        <EditText
            android:id="@+id/operation"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="#fff"
            android:hint="@string/enter_operation"
            android:inputType=""
            android:minHeight="48dp"
            android:textColor="#fff"
            android:textSize="15sp"
            tools:ignore="MissingConstraints,SpeakableTextPresentCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/StyleExpression"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:textColorHint="#fff"
        app:layout_constraintBottom_toTopOf="@+id/buttonResult"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/StyleOperation"
        tools:ignore="ExtraText,NotSibling">
        <EditText
            android:id="@+id/expression"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="#fff"
            android:hint="@string/enter_expression"
            android:inputType=""
            android:minHeight="48dp"
            android:textColor="#fff"
            android:textColorHint="#fff"
            android:textSize="15sp"
            tools:ignore="MissingConstraints,SpeakableTextPresentCheck"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="212dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonResult"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="5dp"
        android:height="15dp"
        android:text="@string/resultButton"
        android:textColor="#fff"
        app:cornerRadius="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/StyleExpression"
        app:strokeColor="@color/white"
        tools:ignore="MissingConstraints" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonInformation"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="1dp"
        android:text="@string/usage_information"
        android:textColor="#fff"
        app:cornerRadius="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/shareInformation"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonResult"
        app:layout_constraintVertical_bias="0.0"
        app:strokeColor="@color/white"
        tools:ignore="TouchTargetSizeCheck" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/shareInformation"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="155dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:text="@string/Share"
        android:textColor="#fff"
        app:cornerRadius="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/buttonInformation"
        app:layout_constraintTop_toBottomOf="@+id/buttonResult"
        app:layout_constraintVertical_bias="0.0"
        app:strokeColor="@color/white"
        tools:ignore="MissingConstraints,TouchTargetSizeCheck" />



</androidx.constraintlayout.widget.ConstraintLayout>